# Pencil

./: .gitignore  .gitmodules  dockerfile  readme.md
OpenCheetah/: .gitignore  CMakeLists.txt  README.md
OpenCheetah/SCI/: CMakeLists.txt
OpenCheetah/SCI/pybind-test/: Binder.cpp  BinderTest.py  CMakeLists.txt  SCIProvider.h  results-Porthos2PC-server.csv  test.cpp
OpenCheetah/SCI/src/: functionalities_uniform.h  library_fixed.cpp  library_fixed.h  library_fixed_uniform.cpp  library_fixed_uniform.h  library_fixed_uniform_cheetah.cpp
OpenCheetah/SCI/src/NonLinear/: relu-field.h  relu-interface.h  relu-ring.h
OpenCheetah/SCI/src/cheetah/: cheetah-api.cpp
OpenCheetah/networks/: main_matmul.cpp
pencil-fullhe/: .gitignore  client.py  client_costs.py  client_modules.py  combination_attack.py  communication_client.py  communication_common.py  communication_server.py  config.py  crypto_gpu_cheetah.py  crypto_plain.py  dataloader.py  gather_tools.sh  gradient_matching.py  model.py  optimizer.py  readme.md  server.py  server_costs.py  server_modules.py  server_plain.py  test.py  test_checkpoints.py  test_correct.py  test_priv_client.py  test_priv_server.py  torch_models.py  train_priv_client.py  train_priv_plain.py  train_priv_server.py  train_torch.py  train_torch_resnet50.py  trusted_preparation.py
pencil-prep/: client.py  client_costs.py  client_modules.py  communication_client.py  communication_common.py  config.py  crypto_gpu_cheetah.py  crypto_plain.py  crypto_switch.py  dataloader.py  gather_tools.sh  gradient_matching.py  notes.txt  optimizer.py  readme.md  server.py  server_costs.py  server_modules.py  server_plain.py  test_priv_client.py  torch_models.py  train_priv_client.py  train_priv_plain.py  train_priv_server.py  train_torch.py  train_torch_resnet50.py  trusted_preparation.py  utils.py
scripts/: .gitignore  build_dependencies.sh  build_ezpc.sh  build_opencheetah.sh  build_seal_cuda.sh  fullhe_trivial.sh  gen_scripts.py  prep_trivial.sh
seal-cuda/binder/: x.py
